dev/wilapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: wilapp
    namespace: dev
spec:
    replicas: 1
    selector:
        matchLabels:
            app: wilapp
    template:
        metadata:
            labels:
                app: wilapp
        spec:
            containers:
                - name: wilapp
                  image: wil42/playground:v1
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8888
                        name: wilport
                        protocol: TCP
                  readinessProbe:
                      httpGet:
                          port: wilport
                          path: /
