dev/wilapp-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: wilapp-service
    namespace: dev
spec:
    type: ClusterIP
    selector:
        app: wilapp
    ports:
        - name: http
          port: 80
          targetPort: wilport
