dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wilapp-ingress
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host:
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wilapp-service
              port:
                number: 80
